--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1204,18 +1204,18 @@ dev.off()
 
 ### 5.4 tkplotによるインタラクティブなプロット
 
-Rとigraphでは、インタラクティブなネットワークプロットができます。もしスモールグラフのレイアウトをちょこっとだけ調整したい時なんかには使えるオプションになりえます。手動でレイアウトを調整したら、ノードの座標を得ることで他のプロットにそれを流用できます。
+Rとigraphでは、インタラクティブなネットワークプロットができます。もし小さなグラフのレイアウトを少しだけ調整したい時に使えるオプションになりえます。手動でレイアウトを調整したら、ノードの座標を得ることで他のプロットにそれを流用できます。
 
 ```{r, eval=T}
-tkid <- tkplot(net) #tkid is the id of the tkplot that will open
-l <- tkplot.getcoords(tkid) # grab the coordinates from tkplot
+tkid <- tkplot(net) #tkid はこれから開く tkplot の id
+l <- tkplot.getcoords(tkid) # tkplot から座標を取得
 tk_close(tkid, window.close = T)
 plot(net, layout=l)
 ```
 
-### 5.5 その他のネットワーク表現
+### 5.5 その他のネットワーク表現方法
 
-現段階では、ネットワークを表現する方法はヘアボール(毛玉)プロット以外にもたくさんあるということをすぐ思い出せるようにしておくといいでしょう。例えば、次の図は簡単に出すことができるネットワーク行列のヒートマップです：
+現段階では、ネットワークを表現する方法がヘアボール(毛玉)プロット以外にもたくさんあるということを知っておけば大丈夫です。例えば、下図は簡単に作れるネットワーク行列のヒートマップです：
 
 ```{r, eval=T}
 netm <- get.adjacency(net, attr="weight", sparse=F)
