--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1312,7 +1312,7 @@ diam <- get_diameter(net, directed=T)
 diam
 ```
 
-get_diameter()では頂点の数列として返されます。ただし、一つのベクトルとして表現するよう求められた場合は、一つの頂点に含まれるノードの数値的指標として出力される。辺の数列においても同じことが言えます。
+get_diameter()ではノードの数列が返されます。ただし、ベクトルとして表現するように指定した場合には、一つのベクトルに含まれるノードのインデックスを数字として出力します。エッジにおいても同様です。
 
 ```{r, eval=T}
 class(diam)
