--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1392,7 +1392,7 @@ centr_betw(net, directed=T, normalized=T)
 
 ### 6.8 ハブとオーソリティ
 
-Jon Kleinbergによって開発された、ハブとオーソリティのアルゴリズムは当初、ウェヴページを調べるために用いられました。ハブには膨大な数の出射リンクの一覧が含まれます。オーソリティはハブからの多数の入射リンクをもっています。おそらくこれはそのページに質の高い関連情報が載っているからでしょう。
+Jon Kleinbergによって開発された、ハブとオーソリティのアルゴリズムは、もともとウェブページを調べるために用いられました。ハブには膨大な数の出射リンクの一覧が含まれます。オーソリティはハブからの多数の入射リンクをもっています。おそらくこれはそのページに質の高い関連情報が載っているからでしょう。
 ```{r, eval=T}
 hs <- hub_score(net, weights=NA)$vector
 as <- authority_score(net, weights=NA)$vector
