--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1356,16 +1356,16 @@ xlab="Degree", ylab="Cumulative Frequency")
 
 ### 6.7 中心性と集権化 (Centrality & centralization)
 
-ノードの中心性とグラフ全体における集権化についてです。前者は`res`で返さ、後者は`centralization`や`theoretical_max`によって出力されるあるグラフにおける最大の集権化スコアです。中心性の機能はvidsパラメータを用いてセットした、ノードのサブセットでも使えます。この機能は、全ての中心性を計算すると資源や時間を浪費してしまいそうな大規模なグラフで有用です。
+ノードの中心性とグラフ全体における集権化についてです。前者は`res`で返され、後者は`centralization`や`theoretical_max`によって出力されます。中心性は`vids`パラメータを用いて作成したノードのサブセットでも使えます。全ての中心性を計算すると、リソースや時間を浪費してしまいそうな大規模なグラフで有用です。
 
-*次数 (Degree)*　（つながりの数）
+*次数 (Degree)*（つながりの数）
 
 ```{r, eval=F}
 degree(net, mode="in")
 centr_degree(net, mode="in", normalized=T)
 ```
 
-*近接性 (Closeness)*　（グラフにおける近接中心性）
+*近接性 (Closeness)*（グラフにおける近接中心性）
 ネットワークにおけるノードの平均測地的距離の逆数です。
 
 ```{r, eval=F}
@@ -1373,15 +1373,15 @@ closeness(net, mode="all", weights=NA)
 centr_clo(net, mode="all", normalized=T)
 ```
 
-*固有ベクトル (Eigenvector)*　（コネクションの中心性の総和に比例した中心性）
-そのグラフ行列の最初の固有ベクトルの値のことです。
+*固有ベクトル (Eigenvector)*（次数中心性の総和に比例した中心性）
+そのグラフ行列の第一固有ベクトルの値のことです。
 
 ```{r, eval=F}
 eigen_centrality(net, directed=T, weights=NA)
 centr_eigen(net, directed=T, normalized=T)
 ```
 
-*媒介性 (Betweenness)*　（他を仲介する位置にあノードを基本とした中心性）
+*媒介性 (Betweenness)*　（他を仲介する位置にあるノードを基本とした中心性）
 そのノードもしくはエッジを通る測地線の数のことです。
 
 ```{r, eval=F}
@@ -1392,7 +1392,7 @@ centr_betw(net, directed=T, normalized=T)
 
 ### 6.8 ハブとオーソリティ
 
-Jon Kleinbergによって開発された、ハブとオーソリティのアルゴリズムは、もともとウェブページを調べるために用いられました。ハブには膨大な数の出射リンクの一覧が含まれます。オーソリティはハブからの多数の入射リンクをもっています。おそらくこれはそのページに質の高い関連情報が載っているからでしょう。
+Jon Kleinbergによって開発された、ハブとオーソリティのアルゴリズムは、もともとウェブページを調べるために用いられました。ハブには膨大な数のリンク一覧が含まれます。オーソリティはハブから多くリンクされています。おそらくこれはそのページに質の高い情報が載っているからでしょう。
 ```{r, eval=T}
 hs <- hub_score(net, weights=NA)$vector
 as <- authority_score(net, weights=NA)$vector
