--- a/NetSciX_2016_Workshop_ja.Rmd
+++ b/NetSciX_2016_Workshop_ja.Rmd
@@ -1407,7 +1407,7 @@ dev.off()
 
 ## 7. 距離と経路
 
-平均(最短)経路長：ネットワーク内のノードとノードの最短経路の平均をあらわします(有向グラフではどちらの方向性においても)。
+平均（最短）経路長：ネットワーク内のノードとノードの最短経路の平均をあらわします（有向グラフではどちらの方向性においても）。
 
 ```{r, eval=T}
 mean_distance(net, directed=F)
@@ -1492,7 +1492,7 @@ E(network)[X %<-% Y] ＹからＸに向かうエッジを選択します
 E(net)[ V(net)[type.label=="Newspaper"] %->% V(net)[type.label=="Online"] ]
 ```
 
-共引用(２つのノードでどれだけのノミネーションをシェアしているか):
+共引用（２つのノードでどれだけのノミネーションをシェアしているか）:
 
 ```{r, eval=T}
 cocitation(net)
@@ -1500,11 +1500,11 @@ cocitation(net)
 
 ## 8. サブグループとコミュニティ
 
-最初に、このネットワークを無向性にしましょう。この変換を行う方法はいくつかあります：
+最初に、このネットワークを無向性にしましょう。この変換にはいくつかの方法があります：
 
--つながりのあるノード間に無向性リンクを作る(mode="collapse" )。
--ネットワーク内の有向性リンクに対して無向性リンクを作る。この場合、多重グラフが出来上がることになりそうですが(mode="each" )。
--グラフ内の対称性リンクに対して無向性リンクを作る(mode="mutual" )。
+-つながりのあるノード間に無向性リンクを作る (mode="collapse" )。
+-ネットワーク内の有向性リンクに対して無向性リンクを作る。この場合、多重グラフが出来上がることになりそうですが (mode="each" )。
+-グラフ内の対称性リンクに対して無向性リンクを作る (mode="mutual" )。
 
 AからBとBからAのつながりがあって、それを単一の無向性リンクにまとめてしまう場合、そのエッジ属性を用いて何をすべきかをはっきりさせる必要があります。前にsimplify()を用いて行ったように、‘edge.attr.comb’パラメータを用います。 この時、リンクの重みは合計され、その他のエッジ属性は無視され省かれます。
 
@@ -1515,7 +1515,7 @@ net.sym <- as.undirected(net, mode= "collapse",
 
 ### 8.1 小集団(Cliques)
 
-小集団(無向グラフの完全なサブグラフ)を求めましょう。
+小集団（無向グラフの完全なサブグラフ）を求めましょう。
 
 ```{r, eval=F}
 cliques(net.sym) # 小集団のリスト
@@ -1533,9 +1533,9 @@ plot(as.undirected(net.sym), vertex.label=V(net.sym)$name, vertex.color=vcol)
 
 グループ間をまたぐコネクションがほとんどない、密につながったノードから成るグループを検出するべく、多くのアルゴリズムが開発されています。
 
-*エッジの媒介性に基づいたコミュニティ検出 (Newman-Girvanアルゴリズム)*
+*エッジの媒介性に基づいたコミュニティ検出（Newman-Girvanアルゴリズム）*
 
-媒介性の高いエッジから順に除去され(ステップごとに再計算されます)、最善の分割が選択されます。
+媒介性の高いエッジから順に除去され（ステップごとに再計算されます）、最善の分割が選択されます。
 
 ```{r, eval=T}
 ceb <- cluster_edge_betweenness(net)
@@ -1568,7 +1568,7 @@ modularity(ceb) # グラフの分割のモジュラリティ
 crossing(ceb, net) # ブーリアンベクトル：TRUEだとコミュニティをまたぐエッジ
 ```
 
-分割に対してモジュラリティが高いということは、コミュニティ内のつながりが密でであり、コミュニティ間のつながりが疎であることを反映している。
+分割に対してモジュラリティが高いということは、コミュニティ内のつながりが密であり、コミュニティ間のつながりが疎であることを反映している。
 
 *ラベル伝搬に基づいたコミュニティ検出*
 
@@ -1609,7 +1609,7 @@ plot(net, vertex.size=kc*6, vertex.label=kc, vertex.color=colrs[kc])
 
 同質性：ノードがいくつかの似通った変数で他のノードとつながっている傾向のこと。
 
-- assortativity_nominal()はカテゴリー変数(ラベル)
+- assortativity_nominal()はカテゴリー変数（ラベル）
 - assortativity()は序数以上の変数の際に用いる。
 - assortativity_degree()はノードの次数における同類度を調べる。
 
